<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment"
    android:id="@+id/fragment_main">

    <TextView
        android:id="@+id/mydiab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MyDiab"
        style="@style/MainTitleText"
        android:shadowRadius="2"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"/>

    <TextView
        android:id="@+id/k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="k"
        android:layout_below="@+id/mydiab"
        app:fontFamily="@font/ranchers"
        android:textSize="27sp"
        android:rotation="10"
        android:layout_marginTop="-5dp"
        android:layout_toLeftOf="@id/i"
        android:textColor="@color/blue"
        android:layout_toStartOf="@id/i"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:shadowDy="2"
        android:shadowDx="2"/>

    <TextView
        android:id="@+id/i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="i"
        android:layout_below="@+id/mydiab"
        app:fontFamily="@font/ranchers"
        android:textSize="27sp"
        android:rotation="10"
        android:layout_marginTop="-3dp"
        android:layout_toLeftOf="@id/d"
        android:layout_toStartOf="@id/d"
        android:textColor="@color/green"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:shadowDy="2"
        android:shadowDx="2"
        />

    <TextView
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="d"
        android:layout_below="@+id/mydiab"
        app:fontFamily="@font/ranchers"
        android:textSize="27sp"
        android:rotation="10"
        android:layout_marginTop="-2dp"
        android:layout_toLeftOf="@id/s"
        android:layout_toStartOf="@id/s"
        android:textColor="@color/orange"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:shadowDy="2"
        android:shadowDx="2"/>

    <TextView
        android:id="@+id/s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="s"
        android:layout_below="@+id/mydiab"
        app:fontFamily="@font/ranchers"
        android:textSize="27sp"
        android:rotation="10"
        android:layout_alignRight="@id/mydiab"
        android:layout_alignEnd="@id/mydiab"
        android:textColor="@color/red"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:shadowDy="2"
        android:shadowDx="2"/>

    <ImageView
        android:id="@+id/diababa"
        android:layout_width="@dimen/image_view_width"
        android:layout_height="@dimen/image_view_height"
        android:layout_below="@+id/k"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/blood_smiling" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/values_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/diababa"
        android:text="@string/values_txt"
        android:textColor="@color/black"
        app:fontFamily="@font/redhatdisplay"
        android:textStyle="bold"
        android:drawableRight="@drawable/ic_blood"
        android:drawableEnd="@drawable/ic_blood"
        android:background="?colorPrimary"
        android:padding="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/values_btn"
        android:text="@string/profile_txt"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/redhatdisplay"
        android:textStyle="bold"
        android:background="?colorPrimary"
        android:padding="10dp"
        android:drawableRight="@drawable/ic_profile"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile_btn"
        android:text="@string/settings_txt"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:fontFamily="@font/redhatdisplay"
        android:textStyle="bold"
        android:background="?colorPrimary"
        android:drawableRight="@drawable/ic_settings"
        android:drawableEnd="@drawable/ic_settings"
        android:padding="5dp"/>

</RelativeLayout>